--- a/app/setting/setting.module.css
+++ b/app/setting/setting.module.css
@@ -1,10 +1,28 @@
 /* Mobile first */
 .setting{
-  background-color: aqua;
+
   display: inline-flex;
 }
+.textlock{
+  margin-top: 96px;
+}
+.bigBlock{
+  display: inline-flex;
+  justify-content: center;  
+  gap: 24px;
+}
+.generalBlock{
+  width: 100%;
 
+}
+.title{
+font-family: "Inter";
+font-size: 22;
+font-weight: 500;
+line-height: 1;
+color: var(--text-main);
 
+}
 /* Tablet (приблизно ≥768px) */
 @media (min-width: 768px) {
   .wrapper {
@@ -24,5 +42,11 @@
 
   .imagesBlock {
     flex: 1;
+  }
+}
+
+@media (min-width: 1440px){
+  .bigBlock{
+    width: 1084px;
   }
 }
