--- a/app/globals.css
+++ b/app/globals.css
@@ -316,9 +316,9 @@ a {
   transition: color var(--transition-base);
 }
 
-a:hover {
-  /* text-decoration: underline; */
-}
+/*a:hover {
+   text-decoration: underline; 
+}*/
 
 button,
 input,
