--- a/app/register/register.module.css
+++ b/app/register/register.module.css
@@ -7,19 +7,13 @@
   grid-template-columns: 1fr;
   height: 100hv;
 }
-
-.imgPart {
-  display: flex;
-  justify-content: center; 
-  align-items: center;    
-  width: 100%;
-  height: 100%;
+.imgPart{
+  display: none;
 }
-
 .imgPage {
   max-width: 100%;
   max-height: 100%;
-  object-fit: cover; 
+  object-fit: cover;
 }
 .mainPart {
   display: flex;
@@ -70,11 +64,11 @@
   line-height: 1.4;
   color: var(--color-primary);
 }
-.headLink{
+.headLink {
   display: flex;
   align-items: center;
-max-width: 720px;
-margin-left: 65px;
+  max-width: 720px;
+  margin-left: 65px;
 }
 @media (min-width: 768px) {
   .cover {
@@ -99,4 +93,11 @@ margin-left: 65px;
   .cover {
     width: 1440px;
   }
+.imgPart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
 }
