--- a/components/AuthCover/AuthCover.module.css
+++ b/components/AuthCover/AuthCover.module.css
@@ -7,10 +7,16 @@
 .hederPart{
 display: flex;
 align-items: center;
-width: 720px;
-padding-left: 72px;
+width: 320px;
+padding-left: 20px;
 }
 .footerPart {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 8px;
+}
+.footerEmail{
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -27,4 +33,13 @@ padding-left: 72px;
 .mailIcon{
   width: 16px;
   height: 16px;
+}
+
+@media (min-width: 768px) {
+  .hederPart{
+display: flex;
+align-items: center;
+width: 720px;
+padding-left: 72px;
+}
 }
