--- a/components/ResetPasswordForm/ResetPasswordForm.module.css
+++ b/components/ResetPasswordForm/ResetPasswordForm.module.css
@@ -1,3 +1,30 @@
 .resetForm{
     
 }
+.fialdStyle{
+  margin-bottom: 20px;
+}
+.btn {
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  color: var(--color-bg);
+  background-color: var(--color-primary);
+  border-radius: 5px;
+  width: 100%;
+  height: 44px;
+  padding: 8px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+  transform: scale(1.01);
+  overflow: hidden;
+}
