--- a/app/tools/tools.module.css
+++ b/app/tools/tools.module.css
@@ -22,7 +22,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1440px) {
   .grid {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -39,7 +39,11 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   color: inherit;
-  transition: transform 0.3s, box-shadow 0.3s, border 0.3s, background 0.3s;
+  transition:
+    transform 0.3s,
+    box-shadow 0.3s,
+    border 0.3s,
+    background 0.3s;
   position: relative;
   opacity: 0;
   transform: translateY(30px);
