--- a/app/setting/setting.module.css
+++ b/app/setting/setting.module.css
@@ -8,9 +8,12 @@
   .setting {
     display: grid;
     grid-template-columns: 292px 1fr;
-    height: 100vh;
+    height: 100%;
   }
 }
 
 @media (min-width: 1440px) {
+    .setting {
+    height: 100vh;
+  }
 }
