--- a/components/ResetPasswordForm/ResetPasswordForm.module.css
+++ b/components/ResetPasswordForm/ResetPasswordForm.module.css
@@ -4,6 +4,10 @@
 .fialdStyle{
   margin-bottom: 20px;
 }
+.mb{
+  margin-bottom: 12px;
+  padding: 8px;
+}
 .btn {
   font-family: "Inter";
   font-size: 16px;
@@ -21,10 +25,20 @@
   align-items: center;
   cursor: pointer;
   transition: transform 0.2s ease;
+  margin-top: 24px;
 }
 .btn:hover,
 .btn:focus,
 .btn:active {
   transform: scale(1.01);
   overflow: hidden;
+}
+@media (min-width: 1440px) {
+    .btnMb{
+      margin-top: 56px;
+
+    }
+    .btn{
+      width: 188px;
+    }
 }
