--- a/components/ChangeUser/ChangeUser.module.css
+++ b/components/ChangeUser/ChangeUser.module.css
@@ -1,30 +1,28 @@
-.userInfo{
-    display: flex;
-    flex-direction: column;
-    margin: 26px auto;
-    gap: 12px;
-    width: 100%;
+.userInfo {
+  display: flex;
+  flex-direction: column;
+  margin: 26px auto;
+  gap: 12px;
+  width: 100%;
 }
 
-.photo{
-    width: 64px;
-    height: 64px;
+.photo {
+  width: 64px;
+  height: 64px;
 }
-.img{
-    display: inline;
-    width: 64px;
-    height: 64px;
-    border: none;
-    border-radius: 50%;
-    overflow: hidden;
+.img {
+  display: inline;
+  width: 64px;
+  height: 64px;
+  border: none;
+  border-radius: 50%;
+  overflow: hidden;
 }
-.fialdStyle{
-display: flex;
-flex-direction: column;
-gap: 16px;
-
+.fialdStyle {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
-
 
 .field {
   width: 100%;
@@ -40,6 +38,7 @@ gap: 16px;
   padding: 10px 14px;
   box-shadow: 0px 1px 2px rgba(10, 13, 18, 0.05);
   margin-top: 6px;
+  background-color: var(--background);
 }
 
 .field:hover,
@@ -61,17 +60,8 @@ gap: 16px;
   font-weight: 600;
   line-height: 1.4;
   color: var(--color-text);
-
 }
 
-.fieldName {
-  font-family: "Inter";
-  font-size: 14;
-  font-weight: 600;
-  line-height: 1.4;
-  color: var(--color-text);
-
-}
 .fieldPosition {
   display: flex;
   flex-direction: column;
@@ -79,7 +69,7 @@ gap: 16px;
   position: relative;
   gap: 6px;
 }
-.btnBlock{
+.btnBlock {
   display: inline-flex;
   gap: 32px;
   justify-content: center;
@@ -114,7 +104,7 @@ gap: 16px;
   width: 188px;
   height: 44px;
   padding: 8px;
-  border: 2px solid rgba(108, 99, 255, 1.0);
+  border: 2px solid rgba(108, 99, 255, 1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,12 +123,12 @@ gap: 16px;
 
 .uploadBtn {
   display: flex;
- flex-direction: column;
+  flex-direction: column;
   align-items: center;
   gap: 8px;
   padding: 16px;
   background: var(--background);
-  border: 1px solid rgba(113, 118, 128, 1.0);
+  border: 1px solid rgba(113, 118, 128, 1);
   border-radius: 8px;
   cursor: pointer;
   color: var(--color-grey);
@@ -152,12 +142,12 @@ gap: 16px;
 .uploadBtn:hover {
   background: #e0e7ff;
 }
-.span{
+.span {
   font-weight: 600;
   color: var(--color-primary);
 }
 
-.cloud{
+.cloud {
   background-color: var(--color-neutral);
   width: 40px;
   height: 40px;
@@ -165,6 +155,20 @@ gap: 16px;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  color: rgba(113, 118, 128, 1.0);
-  border-color: "rgba(229, 231, 235, 1.0)"; 
+  color: rgba(113, 118, 128, 1);
+  border-color: "rgba(229, 231, 235, 1.0)";
+}
+
+@media (max-width: 767px) {
+  .btnBlock{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+    width: 100%;
+  }
+  .btn,
+.btnCancel{
+  width: 100%;
+}
 }
