--- a/components/SettingBlock/SettingBlock.module.css
+++ b/components/SettingBlock/SettingBlock.module.css
@@ -16,13 +16,16 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-bottom: 26px;
+  margin: 0 10px 26px 10px;
 }
 .pwdBlock {
   padding: 0 32px 15px 0;
   display: flex;
   flex-direction: column;
   gap: 26px;
+}
+.personal{
+  padding: 0 32px 15px 0;
 }
 .titl, .title {
   font-size: 22px;
@@ -59,16 +62,21 @@
   justify-content: center;
   gap: 24px;
   width: 100%;
-  padding: 10px auto;
+  padding: 10px;
 }
-.pwdBlock {
-  width: 100%;
+.pwdBlock,
+.personal {
+  min-width: 300px;
 }
 
 @media (min-width: 768px) {
   .bigBlock {
-    width: 500px;
+    width: 450px;
   }
+  .textlock {
+
+  margin: 0 0 26px 0;
+}
 }
 
 @media (min-width: 1440px) {
