--- a/app/development/development.module.css
+++ b/app/development/development.module.css
@@ -24,19 +24,23 @@
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
 }
 
 @keyframes zoomBg {
+
   0%,
   100% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.1);
   }
@@ -71,10 +75,12 @@
     transform: translateY(100vh) scale(0.5);
     opacity: 0;
   }
+
   50% {
     opacity: 1;
     transform: translateY(50vh) scale(1);
   }
+
   100% {
     transform: translateY(-10vh) scale(0.5);
     opacity: 0;
@@ -86,58 +92,72 @@
   left: 10%;
   animation-delay: 0s;
 }
+
 .particle:nth-child(2) {
   left: 20%;
   animation-delay: 2s;
 }
+
 .particle:nth-child(3) {
   left: 30%;
   animation-delay: 4s;
 }
+
 .particle:nth-child(4) {
   left: 40%;
   animation-delay: 6s;
 }
+
 .particle:nth-child(5) {
   left: 50%;
   animation-delay: 8s;
 }
+
 .particle:nth-child(6) {
   left: 60%;
   animation-delay: 10s;
 }
+
 .particle:nth-child(7) {
   left: 70%;
   animation-delay: 1s;
 }
+
 .particle:nth-child(8) {
   left: 80%;
   animation-delay: 3s;
 }
+
 .particle:nth-child(9) {
   left: 90%;
   animation-delay: 5s;
 }
+
 .particle:nth-child(10) {
   left: 15%;
   animation-delay: 7s;
 }
+
 .particle:nth-child(11) {
   left: 25%;
   animation-delay: 9s;
 }
+
 .particle:nth-child(12) {
   left: 35%;
   animation-delay: 11s;
 }
+
 .particle:nth-child(13) {
   left: 65%;
   animation-delay: 13s;
 }
+
 .particle:nth-child(14) {
   left: 75%;
   animation-delay: 15s;
 }
+
 .particle:nth-child(15) {
   left: 85%;
   animation-delay: 17s;
@@ -181,6 +201,7 @@
       0 0 16px rgba(0, 191, 166, 0.4),
       0 0 24px rgba(255, 110, 196, 0.3);
   }
+
   to {
     text-shadow:
       0 0 16px rgba(108, 99, 255, 1),
@@ -205,4 +226,677 @@
   padding: 16px;
   opacity: 0.9;
   z-index: 10;
+}
+
+/* Стили Виталия */
+
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+} */
+
+
+
+/* p:last-child {
+  margin-bottom: 0;
+} */
+/*
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+} */
+
+/* a {
+  text-decoration: none;
+  color: currentColor;
+  font-style: normal;
+} */
+
+/* button {
+  font-family: inherit;
+  color: currentColor;
+  cursor: pointer;
+  border: none;
+  padding: 0px;
+} */
+
+/* img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+} */
+
+/* body {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  letter-spacing: 0.02em;
+  font-family: "Nunito", sans-serif;
+  background-color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  color: #717680;
+} */
+
+.dashboard {
+  display: none;
+}
+
+.header {
+  padding: 16px 0px;
+}
+
+.container,
+.my {
+  display: flex;
+  margin: 0 auto;
+  max-width: 390px;
+  padding: 0px 17px;
+  justify-content: space-between;
+}
+
+/* хеадер */
+.social-icon {
+  fill: #5b4bdb;
+}
+
+.topbar_button {
+  border-radius: 50px;
+  width: 34px;
+  height: 34px;
+}
+
+.social-icon-menu {
+  stroke-width: 1.61px;
+  stroke: #1f2937;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+}
+
+.button-button-img {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icon-menu-b {
+  stroke-width: 2px;
+  stroke: #000;
+}
+
+.topbar-button-2 {
+  background-color: transparent;
+}
+
+.my {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: left;
+  align-items: center;
+}
+
+/* хедер початок */
+.button_button_img {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+.topbar_button {
+  border-radius: 50px;
+  width: 34px;
+  height: 34px;
+}
+
+.topbar_button_2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent !important;
+}
+
+.social_icon_menu_b {
+  stroke-width: 2px;
+  stroke: #000;
+}
+
+/* хедер кінець */
+
+.resources_a {
+  position: relative;
+  display: inline-block;
+  padding-left: 40px;
+  font-size: 24px;
+  font-weight: 600;
+  font-family: "Nunito", sans-serif;
+  color: #1f2937;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+.resources_a::before {
+  content: "<";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 14px;
+  font-weight: 590;
+  line-height: 1.29412;
+  text-align: center;
+  color: #65676a;
+}
+
+.resources_search {
+  display: flex;
+  align-items: center;
+  border: 1px solid #d1d5db;
+  border-radius: 15px;
+  background: rgba(190, 190, 226, 0.2);
+  padding: 0 8px;
+  width: 352px;
+  height: 31px;
+  gap: 8px;
+}
+
+.resources_search-icon {
+  fill: #6b7280;
+  flex-shrink: 0;
+}
+
+.resources_search-input {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-family: "Inter", sans-serif;
+  height: 100%;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #717680;
+}
+
+/* блок два початок */
+.custom_block {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.text_left {
+  font-weight: 500;
+  font-size: 16px;
+  color: #1f2937;
+  font-family: "Inter", sans-serif;
+  margin-right: 64px;
+}
+
+.custom_icon {
+  fill: #6c63ff;
+  stroke-width: 1px;
+  stroke: #6c63ff;
+}
+
+.text_right {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33333;
+  color: #6c63ff;
+  font-family: "Inter", sans-serif;
+}
+
+.right_group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.arrow_right,
+.arrow_left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  fill: transparent;
+  stroke-width: 1.5px;
+  stroke: #717680;
+}
+
+.arrow_left:hover svg,
+.arrow_right:hover svg {
+  stroke: #1f2937;
+}
+
+.add_button {
+  background-color: transparent;
+}
+
+/* фото блок початок */
+.custom_card {
+  position: relative;
+  width: 120px;
+  height: 130px;
+  cursor: pointer;
+}
+
+.background_block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 120px;
+  min-height: 130px;
+  background: #6c63ff;
+  box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 11px;
+  z-index: 1;
+}
+
+.use_2 {
+  stroke-width: 0.42px;
+  stroke: #1f2937;
+}
+
+.photo_block {
+  position: absolute;
+  top: 20px;
+  left: 17px;
+  width: 86px;
+  height: 90px;
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 11px;
+  z-index: 2;
+}
+
+.overlay_block {
+  position: absolute;
+  top: 15px;
+  left: 20px;
+  width: 86px;
+  height: 90px;
+  background: rgba(252, 252, 255, 0.7);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 11px;
+  transform: rotate(10deg);
+  transition: all 0.3s ease;
+  z-index: 3;
+}
+
+.custom_card:hover .overlay_block {
+  top: 30px;
+  transform: rotate(5deg) translateX(5px);
+}
+
+.main_icon {
+  position: absolute;
+  top: 53px;
+  left: 0px;
+  width: 121px;
+  height: 80px;
+  fill: #e5e7eb;
+  box-shadow: inset 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  transition: fill 0.3s;
+  z-index: 4;
+}
+
+.custom_card:hover .main_icon {
+  fill: #00bfa6;
+}
+
+.hover_button {
+  position: absolute;
+  top: 80px;
+  left: 100px;
+  z-index: 5;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.custom_card:hover .hover_button {
+  opacity: 1;
+}
+
+.icon_text {
+  position: absolute;
+  top: 95px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  font-weight: 500;
+  color: #1f2937;
+  pointer-events: none;
+  z-index: 6;
+}
+
+.cards_wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 71px;
+  row-gap: 19px;
+  max-width: 300px;
+}
+
+.icon_text {
+  font-weight: 600;
+  font-size: 18px;
+  color: #1f2937;
+  font-family: "Nunito", sans-serif;
+}
+
+.custom_card:hover .icon_text {
+  color: #1f2937;
+}
+
+/* нижня частина початок */
+.bar {
+  display: flex;
+  justify-content: center;
+  gap: 148px;
+  align-items: center;
+  background: #fff;
+}
+
+.bar_title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #1f2937;
+  margin: 0;
+}
+
+.desktop {
+  display: none;
+}
+
+.bar_btn {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  background: transparent;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #6c63ff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+/* .bar_btn:hover {
+  background: #6c63ff;
+  color: #fff;
+} */
+
+.bar_icon {
+  fill: currentColor;
+}
+
+/* таблиця початок */
+.table_container {
+  background-color: transparent;
+  width: 100%;
+  overflow-x: auto;
+}
+
+/* table {
+  width: 390px;
+  border-collapse: collapse;
+  background: #f5f5f5;
+  font-family: sans-serif;
+} */
+
+.table_container_th {
+  font-weight: 500;
+  font-size: 8px;
+  line-height: 1.5;
+  color: #667085;
+  font-family: "Inter", sans-serif;
+  padding: 8px 16px;
+}
+
+.table_container_td {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.33333;
+  color: #1f2937;
+  font-family: "Inter", sans-serif;
+  padding: 14px 16px;
+}
+
+.menu_cell {
+  text-align: center;
+  cursor: pointer;
+  font-size: 18px;
+  width: 11px;
+}
+
+.table_container_td_padingr {
+  padding-right: 9px;
+}
+
+.table_container_td_svg {
+  display: none;
+}
+
+.table-cnt {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+/* Десктопна версія */
+@media screen and (min-width: 1148px) {
+  .container {
+    max-width: 1148px;
+    padding: 0 32px;
+  }
+
+  .cards_wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 0px;
+    max-width: 1148px;
+    height: auto;
+  }
+
+  .resources_a {
+    padding: 0px;
+    margin-bottom: 32px;
+  }
+
+  .resources_a::before,
+  .topbar_button_2,
+  .social_icon {
+    display: none;
+  }
+
+  .resources_a_search,
+  .resources_search {
+    width: 100%;
+  }
+
+  .resources_search {
+    padding: 0px;
+  }
+
+  .text_left {
+    margin-right: 0px;
+  }
+
+  .cards_wrapper {
+    width: 1148px;
+    min-height: 223px;
+  }
+
+  .background_block {
+    min-width: 221px;
+    min-height: 223px;
+    max-width: 100%;
+  }
+
+  .photo_block {
+    border-radius: 20px;
+    width: 159px;
+    height: 167px;
+    top: 30px;
+    left: 30px;
+  }
+
+  .overlay_block {
+    top: 30px;
+    left: 40px;
+    border-radius: 20px;
+    width: 159px;
+    height: 167px;
+    transform: rotate(10deg);
+  }
+
+  .resources_search-icon {
+    padding-left: 20px;
+  }
+
+  .custom_card:hover .overlay_block {
+    top: 50px;
+    transform: rotate(5deg) translateX(7px);
+  }
+
+  /* Виправлення таблиці */
+  .table_container {
+    width: 100vw;
+    /* ширина вікна браузера */
+    max-width: 100%;
+
+    overflow-x: auto;
+  }
+
+  .table_container table {
+    width: 100%;
+    /* таблиця займає всю ширину контейнера */
+  }
+
+  /* .use_1 {
+    width: 221px;
+  }
+
+  .main_icon {
+    position: absolute;
+    top: 95px;
+    left: 0;
+    width: 221px;
+    height: 100px;
+  }
+
+  .main_icon use {
+    width: 100%;
+    height: 100%;
+    display: block;
+  } */
+
+  .desktop {
+    display: block;
+  }
+
+  .mobile {
+    display: none;
+  }
+
+  .bar {
+    justify-content: space-between;
+    min-width: 1148px;
+  }
+
+  .table_container_th {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.3;
+    color: #717680;
+    padding: 10px 12px;
+  }
+
+  .table_container_td {
+    font-size: 12px;
+    padding: 10px 12px;
+  }
+
+  .menu_cell {
+    display: none;
+  }
+
+  .table_container_td_svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+  }
+
+  .social_icon_menu_td {
+    stroke-width: 2px;
+    stroke: #6c63ff;
+    fill: transparent;
+  }
+
+  .social_icon_menu-td_two {
+    fill: #6c63ff;
+    padding: 4px 6px;
+  }
+
+  .hover_button {
+    top: 130px;
+    left: 190px;
+  }
+
+  .use_2 {
+    display: block;
+    /* прибирає зайвий прозорий блок */
+    transform: scale(2);
+    /* збільшення іконки в 2 рази */
+    transform-origin: center center;
+    /* масштабування від центру */
+  }
+
+  .icon_text {
+    top: 160px;
+    left: 90%;
+    font-weight: 600;
+    font-size: 34px;
+  }
+
+  .bar_btn {
+    font-size: 16px;
+  }
+
+  .bar_title {
+    font-size: 22px;
+  }
+
+  /* Контейнер SVG для десктопної іконки */
+  .main_icon.desktop {
+    overflow: visible;
+    /* дозволяє збільшеній іконці виходити за межі SVG */
+    display: inline-block;
+    /* або block, залежно від верстки */
+    margin-top: 34px;
+  }
+
+  /* Сам `<use>` з класом use-d */
+  .use-d {
+    display: block;
+    /* прибирає зайвий прозорий блок */
+    transform: scale(1.85) translate(22%, 20%);
+    /* 2× збільшення і зсув вниз на 20% */
+    transform-origin: center center;
+    /* центр масштабування */
+  }
 }
