--- a/components/Logout/LogOut.module.css
+++ b/components/Logout/LogOut.module.css
@@ -1,30 +1,32 @@
-.btn{
-    background-color:transparent;
-    color: var(  --color-primary);
-display: inline-flex;
-gap: 8px;
-align-items: center;
-justify-content: center;
-border: none;
-padding: 16px;
+
+.btn {
+  background-color: transparent;
+  color: var(--color-primary);
+  display: inline-flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: left;
+  border: none;
+  padding: 16px;
   cursor: pointer;
   transition: transform 0.2s ease;
   border-radius: 8px;
-      font-family: "Inter";
-font-size: 18px;
-font-weight: 500;
-line-height: 1;
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  width: 100%;
+  margin: 0 auto 0 0;
 }
 .btn:hover,
 .btn:focus,
 .btn:active {
   transform: scale(1.01);
   overflow: hidden;
-   background-color:var(--color-secondary);
+  background-color: var(--color-secondary);
 }
 
-.logoutIcon{
-    width: 24px;
-    height: 24px;
-
+.logoutIcon {
+  width: 24px;
+  height: 24px;
 }
